--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "dev": "next dev -p 8080",
     "start": "next start",
     "lint": "next lint",
-    "build": "next build && next export",
+    "build": "next build",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d out -t true"
+    "deploy": "gh-pages -d out"
   },
   "dependencies": {
     "lucide-react": "^0.555.0",
