--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "guitar-sequencer",
   "version": "0.1.0",
   "homepage": "https://kkuanhui.github.io/guitar-sequencer",
-  "private": true,
+  "private": false,
   "scripts": {
     "dev": "next dev -p 8080",
     "start": "next start",
     "lint": "next lint",
     "build": "next build",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d out"
+    "deploy": "gh-pages -d out --nojekyll"
   },
   "dependencies": {
     "lucide-react": "^0.555.0",
